--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,277 +1,309 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-header{
-    display: flex;
-    justify-content: center;
-    height: 120px;
+header {
+  display: flex;
+  justify-content: center;
+  height: 120px;
 }
 
-.flex{
-    display: flex;
-    flex-wrap: wrap;
+.flex {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.container{
-    display: flex;
-    justify-content: space-between;
-    width: 990px;
+.container {
+  display: flex;
+  justify-content: space-between;
+  width: 990px;
 }
 
-.logo{
-    display: flex;
-    align-items: center;
+.logo {
+  display: flex;
+  align-items: center;
 }
 
-.menu{
-    display: flex;
-    align-items: center;
+.menu {
+  display: flex;
+  align-items: center;
 }
 
-nav ul, nav li{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+nav ul,
+nav li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-nav ul{
-    display: flex;
+nav ul {
+  display: flex;
 }
 
-nav a{
-    display: block;
-    padding: 15px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: #727272;
-    font-family: arial;
+nav a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #727272;
+  font-family: arial;
 }
 
-
-nav .active a, nav a:hover{
-    background-color: #39aae1;
-    color: #fff;
+nav .active a,
+nav a:hover {
+  background-color: #39aae1;
+  color: #fff;
 }
 
-#banner{
-    display: flex;
-    justify-content: center;
-    background-image: url('file:///Users/gustavohenrique/Documents/Aprendizado/Flex%20Box%20-%20B7%20Web/Projeto%20Final/assets/img/img1.jpg');
+#banner {
+  display: flex;
+  justify-content: center;
+  background-image: url('file:///Users/gustavohenrique/Documents/Aprendizado/Flex%20Box%20-%20B7%20Web/Projeto%20Final/assets/img/img1.jpg');
 
-    background-size: cover;
-    height: 670px;
+  background-size: cover;
+  height: 670px;
 }
 
-.column{
-    flex-direction: column;
+.column {
+  flex-direction: column;
 }
 
-.banner_headline{
-    flex:1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
+.banner_headline {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.banner_headline h1{
-    color: #fff;
-    font-size: 40px;
-    text-shadow: 1px 0px 0px #555;
-    margin: 0;
-    padding: 0;
-    max-width: 320px;
+.banner_headline h1 {
+  color: #fff;
+  font-size: 40px;
+  text-shadow: 1px 0px 0px #555;
+  margin: 0;
+  padding: 0;
+  max-width: 320px;
 }
 
-.banner_headline h2{
-    color: #fff;
-    font-size: 21px;
-    text-shadow: 1px 0px 0px #555;
-    margin: 0;
-    padding: 0;
-    max-width: 300px;
-    margin-top: 20px;
-    font-weight: 300;
+.banner_headline h2 {
+  color: #fff;
+  font-size: 21px;
+  text-shadow: 1px 0px 0px #555;
+  margin: 0;
+  padding: 0;
+  max-width: 300px;
+  margin-top: 20px;
+  font-weight: 300;
 }
 
-.btn-banner{
-    background-color: #fff;
-    color:#555;
-    width: 200px;
-    text-decoration: none;
-    text-align: center;
-    padding: 20px;
-    margin-top: 20px;
+.btn-banner {
+  background-color: #fff;
+  color: #555;
+  width: 200px;
+  text-decoration: none;
+  text-align: center;
+  padding: 20px;
+  margin-top: 20px;
 }
 
-.btn-banner:hover{
-    background-color: #3EAAE2;
-    color:#fff;
+.btn-banner:hover {
+  background-color: #3eaae2;
+  color: #fff;
 }
 
-.banner_options{
-    height: 210px;
-    display: flex;
+.banner_options {
+  height: 210px;
+  display: flex;
 }
 
-.banner1, .banner2, .banner3{
-    flex: 1;
-    color: #fff;
-    padding: 20px;
+.banner1,
+.banner2,
+.banner3 {
+  flex: 1;
+  color: #fff;
+  padding: 20px;
 }
 
-.banner1{
-    background: #39aae1;
+.banner1 {
+  background: #39aae1;
 }
 
-.banner2{
-    background: #0079c7;
+.banner2 {
+  background: #0079c7;
 }
 
-.banner3{
-    background: #2b4c99;
+.banner3 {
+  background: #2b4c99;
 }
 
-.banner_title{
-    font-size: 21px;
-    font-weight: bold;
+.banner_title {
+  font-size: 21px;
+  font-weight: bold;
 }
 
-.banner_desc{
-    font-size: 15px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.banner_desc {
+  font-size: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.banner_options a{
-    display: inline-block;
-    border: 1px solid #fff;
-    padding: 10px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 15px;
+.banner_options a {
+  display: inline-block;
+  border: 1px solid #fff;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 15px;
 }
 
-.hours{
-    font-size: 15px;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #fff;
+.hours {
+  font-size: 15px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #fff;
 }
 
-#geral{
-    display: flex;
-    justify-content:center;
+#geral {
+  display: flex;
+  justify-content: center;
 }
 
-#geral section{
-    flex: 2;
+#geral section {
+  flex: 2;
 }
 
-#geral aside{
-    flex: 1;
+#geral aside {
+  flex: 1;
 }
 
-.widget_title{
-    margin-top: 30px;
-    margin-bottom: 20px;
+.widget_title {
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
-.widget_title_text{
-    color: #000;
-    font-size: 21px;
-    font-weight: bold;
+.widget_title_text {
+  color: #000;
+  font-size: 21px;
+  font-weight: bold;
 }
 
-.widget_title_bar{
-    width: 50px;
-    height: 3px;
-    background:#36a9e1;
-    margin-top: 10px;
+.widget_title_bar {
+  width: 50px;
+  height: 3px;
+  background: #36a9e1;
+  margin-top: 10px;
 }
 
-.quadrado{
-    display: inline-block;
-    width: 157px;
-    height: 157px;
-    background: #36a9e1;
-    margin: 0px 5px 5px 0px;
+.quadrado {
+  display: inline-block;
+  width: 157px;
+  height: 157px;
+  background: #36a9e1;
+  margin: 0px 5px 5px 0px;
 }
 
-.widget_body p{
-    font-size: 15px;
-    color:#000;
+.widget_body p {
+  font-size: 15px;
+  color: #000;
 }
 
-.contato_body p{
-    font-weight: bold;
-    border-bottom: 2px solid #d3d1d1;
-    background: #e0e0e0;
-    padding: 10px;
+.contato_body p {
+  font-weight: bold;
+  border-bottom: 2px solid #d3d1d1;
+  background: #e0e0e0;
+  padding: 10px;
 
-    color: #303030;
+  color: #303030;
 }
 
-.contato_body p:hover{
-    border-bottom: 2px solid #3EA9E1;
-    color: #3EA9E1;
-    cursor: pointer;
+.contato_body p:hover {
+  border-bottom: 2px solid #3ea9e1;
+  color: #3ea9e1;
+  cursor: pointer;
 }
 
-article{
-    flex: 1;
-    min-width: 300px;
-    margin-right: 30px;
+article {
+  flex: 1;
+  min-width: 300px;
+  margin-right: 30px;
 }
 
-article a{
-    text-decoration: none;
+article a {
+  text-decoration: none;
 }
 
-article .news_data{
-    display: flex;
+article .news_data {
+  display: flex;
 }
 
-article .news_posted_at{
-    background: #2b4c99;
-    color:#fff;
-    font-size:12px;
-    padding: 10px;
-    margin-right: 2px;
+article .news_posted_at {
+  background: #2b4c99;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+  margin-right: 2px;
 }
 
-article .news_comments{
-    background: #3EA9E1;
-    color:#fff;
-    font-size:12px;
-    padding: 10px;
+article .news_comments {
+  background: #3ea9e1;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
 }
 
-article .news_thumbnail{
-    margin-top: 20px;
+article .news_thumbnail {
+  margin-top: 20px;
 }
 
-article .news_thumbnail img{
-    width: 100%;
-    height: auto;
+article .news_thumbnail img {
+  width: 100%;
+  height: auto;
 }
 
-article .news_title{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: #000;
-    font-size: 21px;
+article .news_title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #000;
+  font-size: 21px;
 }
 
-article .news_resume{
-    color: #5c5c5c;
-    font-size: 14px;
-    line-height: 22px;
-    margin-bottom: 50px;
+article .news_resume {
+  color: #5c5c5c;
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 50px;
+}
+
+footer {
+  background: #1e1e1e;
+  display: flex;
+  justify-content: center;
+}
+
+.footer_menu {
+  display: flex;
+  flex: 1;
+}
+
+.fm_1,
+.fm_2,
+.fm_3 {
+  flex: 1;
+}
+
+.fm_1 {
+  background: #39aae1;
+}
+
+.fm_2 {
+  background: #0079c7;
+}
+
+.fm_3 {
+  background: #2b4c99;
 }
